# brain

./: .env.example  .eslintrc.json  .gitignore  .lintstagedrc.json  .npmignore  .prettierignore  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SPEC.md  TECHNICAL_DETAILS.md  ainotes.sh  brain-mcp-1.0.0.tgz  commitlint.config.js  feature.md  generate-embeddings.js  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.py  test-mcp-format.js  test-search.js  tsconfig.json
.github/workflows/: README.md  ci.yml  pr-test.yml  publish.yml  release.yml  security.yml
ainotes/: __init__.py  models.py
ainotes/cache/: __init__.py  manager.py
ainotes/cli/: __init__.py  main.py
ainotes/formatters/: __init__.py  output.py
ainotes/graph/: __init__.py  algorithms.py  builder.py
ainotes/parser/: __init__.py  links.py  markdown.py
ainotes/search/: __init__.py  engine.py
docs/: USAGE.md
scripts/: release.sh  update-vectors.js
src/: setup.ts
src/cache/: CacheManager.ts
src/cli/: brain.ts  brainV2.ts  index.ts
src/embedding/: EmbeddingService.ts  VectorStore.ts  VectorStoreV2.ts
src/formatters/: LLMFormatter.ts
src/graph/: GraphBuilder.ts
src/mcp/: server.ts  serverV2.ts
src/migration/: migrateToV2.ts
src/models/: types.ts
src/parser/: BaseParser.ts  ChunkingService.ts  LinkResolver.ts  MarkdownParser.ts  ORGParser.ts  PDFParser.ts  ParserFactory.ts  TXTParser.ts
src/search/: SearchEngine.ts  SearchEngineV2.ts
src/storage/: FileRegistry.ts
test-notes/: README.md  bayesian-pipeline.md  clustering-techniques.md  cosmic-dawn-theory.md  machine-learning-fundamentals.md  neural-networks.md  practical-applications.md  reach-antenna-design.md  reach-observations.md
test-notes/meetings/: 2024-radio-astronomy-conference.md  2024-reach-collaboration.md
tests/: graph.test.ts  multi-format-parser.test.ts  parser.test.ts  search.test.ts  setup.ts  test-embeddings.json  test_basic.py
tests/sample_notes/: index.md  orphaned.md
tests/sample_notes/daily/: 2024-01-01.md  2024-01-02.md
tests/sample_notes/learning/: python.md  react.md
tests/sample_notes/projects/: api.md  web-app.md
